--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -29,14 +29,42 @@ h5 {
 h1 {
   font-size: 3rem;
   font-weight: 400;
+  line-height: 3rem;
 }
 
 h2 {
   font-size: 2rem;
   font-weight: 400;
   text-indent: 3rem;
+  line-height: 2rem;
+}
+
+h3 {
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.6rem;
 }
 
 a {
   text-decoration: none;
+  color: #0297af;
+}
+
+a:hover {
+  color: #a9d752;
+}
+
+button {
+  padding: 10px 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  border: 1px solid #a9d752;
+  outline: none;
+  background-color: #f9f9f9;
+}
+
+button:hover {
+  background-color: #474a8c;
+  color: #ffffff;
+  border: 1px solid #353672;
 }
