--- a/src/stylesheets/landing.css
+++ b/src/stylesheets/landing.css
@@ -1,5 +1,242 @@
 .landing {
   height: 100vh;
   width: 100vw;
-  background-color: grey;
+  background-color: #111;
+  z-index: -1;
+  color: #fff;
+}
+
+.landing-text {
+  position: absolute;
+  left: 10%;
+  top: 10%;
+}
+
+.landing-text p {
+  color: #fff;
+  text-indent: 0.5em;
+}
+
+.landing-text h3 {
+  text-shadow: 1px 1px #000;
+  margin-bottom: 10px;
+  text-indent: 3em;
+}
+
+.landing-text h1 {
+  text-shadow: 2px 2px #ff7114;
+  margin-top: 0px;
+}
+
+.app {
+  background-image: url('../images/astronaut_cropped.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-position-x: 90%;
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+  height: 50em;
+  z-index: 100;
+}
+
+#noise {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 0;
+}
+
+#noise:before {
+  content: '';
+  position: absolute;
+  top: -100%;
+  left: -100%;
+  height: 300%;
+  width: 300%;
+  background: url(http://fariskassim.com/stage/codepenstuff/noise.png) #000;
+  pointer-events: none;
+  display: block;
+  opacity: 0.7;
+  -webkit-animation: grain 5s steps(10) infinite;
+  animation: grain 5s steps(10) infinite;
+  will-change: transform;
+}
+
+@-webkit-keyframes grain {
+  0%,
+  to {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  10% {
+    -webkit-transform: translate(-5%, -10%);
+    transform: translate(-5%, -10%);
+  }
+  20% {
+    -webkit-transform: translate(-15%, 5%);
+    transform: translate(-15%, 5%);
+  }
+  30% {
+    -webkit-transform: translate(7%, -25%);
+    transform: translate(7%, -25%);
+  }
+  40% {
+    -webkit-transform: translate(21%, 25%);
+    transform: translate(21%, 25%);
+  }
+  50% {
+    -webkit-transform: translate(-25%, 10%);
+    transform: translate(-25%, 10%);
+  }
+  60% {
+    -webkit-transform: translate(15%, 5%);
+    transform: translate(15%, 5%);
+  }
+  70% {
+    -webkit-transform: translateY(15%);
+    transform: translateY(15%);
+  }
+  80% {
+    -webkit-transform: translate(25%, 35%);
+    transform: translate(25%, 35%);
+  }
+  90% {
+    -webkit-transform: translate(-10%, 10%);
+    transform: translate(-10%, 10%);
+  }
+}
+@keyframes grain {
+  0%,
+  to {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  10% {
+    -webkit-transform: translate(-5%, -10%);
+    transform: translate(-5%, -10%);
+  }
+  20% {
+    -webkit-transform: translate(-15%, 5%);
+    transform: translate(-15%, 5%);
+  }
+  30% {
+    -webkit-transform: translate(7%, -25%);
+    transform: translate(7%, -25%);
+  }
+  40% {
+    -webkit-transform: translate(21%, 25%);
+    transform: translate(21%, 25%);
+  }
+  50% {
+    -webkit-transform: translate(-25%, 10%);
+    transform: translate(-25%, 10%);
+  }
+  60% {
+    -webkit-transform: translate(15%, 5%);
+    transform: translate(15%, 5%);
+  }
+  70% {
+    -webkit-transform: translateY(15%);
+    transform: translateY(15%);
+  }
+  80% {
+    -webkit-transform: translate(25%, 35%);
+    transform: translate(25%, 35%);
+  }
+  90% {
+    -webkit-transform: translate(-10%, 10%);
+    transform: translate(-10%, 10%);
+  }
+}
+@-webkit-keyframes grain2 {
+  0%,
+  to {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  10% {
+    -webkit-transform: translate(-1%, -2%);
+    transform: translate(-1%, -2%);
+  }
+  20% {
+    -webkit-transform: translate(-2%, 1%);
+    transform: translate(-2%, 1%);
+  }
+  30% {
+    -webkit-transform: translate(3%, -5%);
+    transform: translate(3%, -5%);
+  }
+  40% {
+    -webkit-transform: translate(5%, 5%);
+    transform: translate(5%, 5%);
+  }
+  50% {
+    -webkit-transform: translate(-5%, 2%);
+    transform: translate(-5%, 2%);
+  }
+  60% {
+    -webkit-transform: translate(3%, 1%);
+    transform: translate(3%, 1%);
+  }
+  70% {
+    -webkit-transform: translateY(3%);
+    transform: translateY(3%);
+  }
+  80% {
+    -webkit-transform: translate(5%, 7%);
+    transform: translate(5%, 7%);
+  }
+  90% {
+    -webkit-transform: translate(-2%, 2%);
+    transform: translate(-2%, 2%);
+  }
+}
+@keyframes grain2 {
+  0%,
+  to {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  10% {
+    -webkit-transform: translate(-1%, -2%);
+    transform: translate(-1%, -2%);
+  }
+  20% {
+    -webkit-transform: translate(-3%, 1%);
+    transform: translate(-3%, 1%);
+  }
+  30% {
+    -webkit-transform: translate(3%, -5%);
+    transform: translate(3%, -5%);
+  }
+  40% {
+    -webkit-transform: translate(5%, 5%);
+    transform: translate(5%, 5%);
+  }
+  50% {
+    -webkit-transform: translate(-5%, 2%);
+    transform: translate(-5%, 2%);
+  }
+  60% {
+    -webkit-transform: translate(3%, 1%);
+    transform: translate(3%, 1%);
+  }
+  70% {
+    -webkit-transform: translateY(5%);
+    transform: translateY(5%);
+  }
+  80% {
+    -webkit-transform: translate(5%, 7%);
+    transform: translate(5%, 7%);
+  }
+  90% {
+    -webkit-transform: translate(-2%, 2%);
+    transform: translate(-2%, 2%);
+  }
 }
