--- a/src/stylesheets/presentation.css
+++ b/src/stylesheets/presentation.css
@@ -3,24 +3,82 @@
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
-  height: 50vh;
+  margin-bottom: 30px;
   overflow: hidden;
+  z-index: 100;
+  background-color: white;
+}
+
+.reversed {
+  flex-direction: row-reverse !important;
+}
+
+.presentation button {
+  margin: 5px;
 }
 
 .presentation-text {
-  width: 35%;
+  width: 40%;
+  margin: 5%;
   position: relative;
-  font-family: Lato, @font-family;
   z-index: 1;
 }
 
 .presentation-image {
-  width: 50%;
+  width: 40%;
+  margin: 5%;
   position: relative;
+  cursor: pointer;
 }
 
 .ahoy-image {
-  background: url('https://t.alipayobjects.com/images/T1Ch8kXfpdXXXXXXXX.png')
-    no-repeat center;
+  background: url('../images/screenshot-ahoy.png') no-repeat center;
   background-size: contain;
+}
+
+.museion-image {
+  background: url('../images/screenshot-museion.png') no-repeat center;
+  background-size: contain;
+}
+
+.eclipse-image {
+  background: url('../images/screenshot-eclipse.png') no-repeat center;
+  background-size: contain;
+}
+
+.minesweeper-image {
+  background: url('../images/screenshot-minesweeper.png') no-repeat center;
+  background-size: contain;
+}
+.hel-image {
+  background: url('../images/screenshot-hel.png') no-repeat center;
+  background-size: contain;
+}
+.listknife-image {
+  background: url('../images/screenshot-listknife.png') no-repeat center;
+  background-size: contain;
+}
+
+.language-list {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  text-indent: 0;
+  padding-inline-start: 0px;
+}
+
+.language-icon {
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+}
+
+.dialog {
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 300;
+}
+
+.image {
+  max-width: 80vw;
 }
